# emnlp2025

./: README.md  README_zh.md  pyproject.toml  requirements.txt
answer_data/: hotpot_evaluate.ipynb  info_show.ipynb
examples/: double_glm_voice_hotpot.py  glm_voice_hotpot.py  glm_voice_rgb.py  glm_voice_simple.py
speech_data/: speech_data_generate_en.py  speech_data_generate_zh.py
speech_data/simple/: information.txt  true_answer.txt
src/rag_module/: e2e_rag.py  rag_tools.py  sonar.py
src/speech_tokenizer/: utils.py
src/spoken_chatbot/: model.py
